[gd_scene load_steps=12 format=3 uid="uid://bf0tfj1eo5ap"]

[ext_resource type="Script" uid="uid://cdlrqylqsmc22" path="res://src/ui_parts/good_file_dialog.gd" id="1_awdto"]
[ext_resource type="Script" uid="uid://1hox6gd5pxku" path="res://src/ui_widgets/BetterLineEdit.gd" id="2_52puw"]
[ext_resource type="Texture2D" uid="uid://40yul4xup585" path="res://assets/icons/GoBack.svg" id="2_dyt2g"]
[ext_resource type="Texture2D" uid="uid://bo4xsfjm6wg6v" path="res://assets/icons/GoForward.svg" id="3_8ufx4"]
[ext_resource type="PackedScene" uid="uid://byriqsdywhr1k" path="res://src/ui_widgets/directory_path_widget.tscn" id="4_1umq0"]
[ext_resource type="Texture2D" uid="uid://dr2erka82g6j4" path="res://assets/icons/FieldEdit.svg" id="4_8ufx4"]
[ext_resource type="Texture2D" uid="uid://cvh3kwbucf2n1" path="res://assets/icons/Reload.svg" id="4_udwbh"]
[ext_resource type="Texture2D" uid="uid://kkxyv1gyrjgj" path="res://assets/icons/Visuals.svg" id="5_2ggtv"]
[ext_resource type="Texture2D" uid="uid://d4c7haflm8evm" path="res://assets/icons/Search.svg" id="6_otods"]
[ext_resource type="Script" uid="uid://ynx3s1jc6bwq" path="res://src/ui_widgets/BetterButton.gd" id="7_ejhg0"]
[ext_resource type="FontVariation" uid="uid://bo626nsycqtaj" path="res://assets/fonts/MainFont.tres" id="11_1umq0"]

[node name="GoodFileDialog" type="PanelContainer"]
offset_right = 684.0
offset_bottom = 386.0
theme_type_variation = &"OverlayPanel"
script = ExtResource("1_awdto")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"TitleLabel"
horizontal_alignment = 1

[node name="TopBar" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 6

[node name="UndoButton" type="Button" parent="VBoxContainer/TopBar"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_type_variation = &"IconButton"
icon = ExtResource("2_dyt2g")

[node name="RedoButton" type="Button" parent="VBoxContainer/TopBar"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_type_variation = &"IconButton"
icon = ExtResource("3_8ufx4")

[node name="PathPanel" type="PanelContainer" parent="VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MainPathBox" type="HBoxContainer" parent="VBoxContainer/TopBar/PathPanel"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="DirectoryPathWidget" parent="VBoxContainer/TopBar/PathPanel/MainPathBox" instance=ExtResource("4_1umq0")]
layout_mode = 2

[node name="PathEditButton" type="Button" parent="VBoxContainer/TopBar/PathPanel/MainPathBox"]
layout_mode = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_type_variation = &"FlatButton"
icon = ExtResource("4_8ufx4")

[node name="PathField" type="LineEdit" parent="VBoxContainer/TopBar"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_52puw")
metadata/_custom_type_script = "uid://1hox6gd5pxku"

[node name="RefreshButton" type="Button" parent="VBoxContainer/TopBar"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_type_variation = &"IconButton"
icon = ExtResource("4_udwbh")

[node name="ShowHiddenButton" type="Button" parent="VBoxContainer/TopBar"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_type_variation = &"IconButton"
toggle_mode = true
icon = ExtResource("5_2ggtv")

[node name="SearchButton" type="Button" parent="VBoxContainer/TopBar"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_type_variation = &"IconButton"
toggle_mode = true
icon = ExtResource("6_otods")
script = ExtResource("7_ejhg0")
action = "find"
metadata/_custom_type_script = "uid://ynx3s1jc6bwq"

[node name="MainContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="DrivesContainer" type="PanelContainer" parent="VBoxContainer/MainContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="DrivesList" type="ItemList" parent="VBoxContainer/MainContainer/DrivesContainer"]
unique_name_in_owner = true
layout_mode = 2
fixed_icon_size = Vector2i(16, 16)

[node name="FilePicker" type="VBoxContainer" parent="VBoxContainer/MainContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="SearchField" type="LineEdit" parent="VBoxContainer/MainContainer/FilePicker"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("11_1umq0")
script = ExtResource("2_52puw")

[node name="VisualPicker" type="PanelContainer" parent="VBoxContainer/MainContainer/FilePicker"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="FileList" type="ItemList" parent="VBoxContainer/MainContainer/FilePicker/VisualPicker"]
unique_name_in_owner = true
layout_mode = 2
allow_rmb_select = true
fixed_icon_size = Vector2i(16, 16)

[node name="FileContainer" type="HBoxContainer" parent="VBoxContainer/MainContainer/FilePicker"]
unique_name_in_owner = true
layout_mode = 2

[node name="FileField" type="LineEdit" parent="VBoxContainer/MainContainer/FilePicker/FileContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_52puw")

[node name="ExtensionPanel" type="PanelContainer" parent="VBoxContainer/MainContainer/FilePicker/FileContainer"]
layout_mode = 2
theme_type_variation = &"ContrastFlatPanel"

[node name="ExtensionLabel" type="Label" parent="VBoxContainer/MainContainer/FilePicker/FileContainer/ExtensionPanel"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="CloseButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 6
focus_mode = 0
mouse_default_cursor_shape = 2

[node name="SpecialButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 6
focus_mode = 0
mouse_default_cursor_shape = 2
